--- a/templates/allEvents.html
+++ b/templates/allEvents.html
@@ -48,6 +48,7 @@
         <div class="form-group">
   				<d1>
             <input type="date" required class="form-control" value="{{ date }}" id="period" name="period" style="width: 200px;">
+            <input type="hidden" name="action" value="per_day">
   				</d1>
   			</div>
         <div class="form-group">
@@ -68,7 +69,27 @@
   			</div>
   		</form>
 
-      <canvas id="myChart" style="padding: 10px;"></canvas>
+      <canvas id="dayChart" style="padding: 10px;"></canvas>
+
+    </div>
+
+    <div style= "background-color: rgb(42, 63, 84); padding: 15px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px;">
+      <h1 style="color: white; text-align: center;">Evènements la semaine du {{ date }} au {{ date }}</h1>
+      <form action="{{ url_for('getEvents') }}" method="post" class="form-inline" role="form" style="text-align: center; padding-top: 10px;">
+        <div class="form-group">
+  				<d1>
+            <input type="week" required class="form-control" id="week" name="week" value="week" style="width: 200px;">
+            <input type="hidden" name="action" value="per_week">
+  				</d1>
+  			</div>
+        <div class="form-group">
+  				<d1>
+            <input id="filter" type=submit value="Filtrer" class="btn btn-success">
+  				</d1>
+  			</div>
+  		</form>
+
+      <canvas id="weekChart" style="padding: 10px;"></canvas>
 
     </div>
 
@@ -136,7 +157,7 @@
                "{{item}}",
               {% endfor %}],
     datasets : [{
-        label: '{{ Lenine_legend }}',
+        label: 'Rue Lénine',
         fill: false,
         lineTension: .3,
         backgroundColor: "rgba(75,192,192,1)",
@@ -161,7 +182,7 @@
         spanGaps: false
     },
     {
-        label: '{{ MG_legend }}',
+        label: 'Rue Maurice Grandcoing',
         fill: false,
         lineTension: .3,
         backgroundColor: "#ff3333",
@@ -186,7 +207,7 @@
         spanGaps: false
     },
     {
-        label: '{{ Toto_legend }}',
+        label: 'Rue Toto',
         fill: false,
         lineTension: .3,
         backgroundColor: "#5cb85c",
@@ -213,12 +234,125 @@
   }
 
   // get chart canvas
-  var ctx = document.getElementById("myChart").getContext("2d");
+  var ctx = document.getElementById("dayChart").getContext("2d");
 
   // create the chart using the chart canvas
-  var myChart = new Chart(ctx, {
+  var dayChart = new Chart(ctx, {
     type: 'line',
     data: chartData,
+    options: {
+        legend: {
+            labels: {
+                fontColor: "white",
+                padding: 20
+            }
+        },
+        scales: {
+            yAxes: [{
+                ticks: {
+                    fontColor: "white",
+                    beginAtZero: true
+                }
+            }],
+            xAxes: [{
+                ticks: {
+                    fontColor: "white",
+                    beginAtZero: true
+                }
+            }]
+        },
+        responsive: true
+      },
+  });
+
+  //weekChart
+
+  var week_chartData = {
+    labels : ['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi', 'Dimanche'],
+    datasets : [{
+        label: 'Rue Lénine',
+        fill: false,
+        lineTension: .3,
+        backgroundColor: "rgba(75,192,192,1)",
+        borderColor: "rgba(75,192,192,0.4)",
+        borderWidth: 1.5,
+        borderCapStyle: 'butt',
+        borderDash: [],
+        borderDashOffset: 0.0,
+        borderJoinStyle: 'miter',
+        pointBorderColor: "rgba(75,192,192,1)",
+        pointBackgroundColor: "#fff",
+        pointBorderWidth: 1,
+        pointHoverRadius: 5,
+        pointHoverBackgroundColor: "rgba(75,192,192,1)",
+        pointHoverBorderColor: "rgba(220,220,220,1)",
+        pointHoverBorderWidth: 2,
+        pointRadius: 1,
+        pointHitRadius: 10,
+        data : [{% for item in Lenine_week_values %}
+                  {{item}},
+                {% endfor %}],
+        spanGaps: false
+    },
+    {
+        label: 'Rue Maurice Grandcoing',
+        fill: false,
+        lineTension: .3,
+        backgroundColor: "#ff3333",
+        borderColor: "#ff3333",
+        borderWidth: 1.5,
+        borderCapStyle: 'butt',
+        borderDash: [],
+        borderDashOffset: 0.0,
+        borderJoinStyle: 'miter',
+        pointBorderColor: "rgba(75,192,192,1)",
+        pointBackgroundColor: "#fff",
+        pointBorderWidth: 1,
+        pointHoverRadius: 5,
+        pointHoverBackgroundColor: "rgba(75,192,192,1)",
+        pointHoverBorderColor: "rgba(220,220,220,1)",
+        pointHoverBorderWidth: 2,
+        pointRadius: 1,
+        pointHitRadius: 10,
+        data : [{% for item in MG_week_values %}
+                  {{item}},
+                {% endfor %}],
+        spanGaps: false
+    },
+    {
+        label: 'Rue Toto',
+        fill: false,
+        lineTension: .3,
+        backgroundColor: "#5cb85c",
+        borderColor: "#5cb85c",
+        borderWidth: 1.5,
+        borderCapStyle: 'butt',
+        borderDash: [],
+        borderDashOffset: 0.0,
+        borderJoinStyle: 'miter',
+        pointBorderColor: "rgba(75,192,192,1)",
+        pointBackgroundColor: "#fff",
+        pointBorderWidth: 1,
+        pointHoverRadius: 5,
+        pointHoverBackgroundColor: "rgba(75,192,192,1)",
+        pointHoverBorderColor: "rgba(220,220,220,1)",
+        pointHoverBorderWidth: 2,
+        pointRadius: 1,
+        pointHitRadius: 10,
+        data : [{% for item in Toto_week_values %}
+                  {{item}},
+                {% endfor %}],
+        spanGaps: false
+    }]
+  }
+
+  // get chart canvas
+  var ctx = document.getElementById("weekChart").getContext("2d");
+
+  // create the chart using the chart canvas
+  var weekChart = new Chart(ctx, {
+    type: 'line',
+    data: week_chartData,
     options: {
         legend: {
             labels: {
