--- a/templates/allEvents.html
+++ b/templates/allEvents.html
@@ -27,6 +27,7 @@
 
 		<nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
 			<a class="navbar-brand" href="/getEvents">Mon Parc</a>
+      <a class="navbar-brand" href="/admin">Alertes</a>
       <a href="/signIn"><img src="/static/images/logout.png" title="Déconnexion" style="margin-left: 87%; margin-top: 5px; height: 40px; width: 40px;"></img></a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 		</nav>
